--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+<string name="agree">Agree</string>
+<string name="disagree">Disagree</string>
+<string name="agreement_top">Agreement:</string>
+<string name="agreement">For users:\n • I agree that the application performs the function of a conventional internet browser\n • I agree to use the free app only 7 days from the date of the first run. Or 14 days, if I agree to leave a review in the online store Google Play\n • After the trial period, I get the opportunity to buy the application\n • I agree that the content provided by third party Internet sites, and nothing against the content does not have the\n\nFor right holders:\n • I agree that the application performs the function of a conventional internet browser\n • If the information belongs to me, and I do not want her to be freely disseminated, I personally undertake to try to remove this information from sites that can open this Internet browser\n • If I am unable to delete the information from the site, I agree to contact the developer of the application to negotiate the removal of the possibility to read information that belongs to me, the right holder\n\nContact:\n • Roman Gaitbaev\n • romzesrover @ gmail. com\n • vk.com / romzesrover</string>
     <string-array name="rate_me">
          <item >Rate me !</item>
          <item >If you like my app, please give your feedback :)</item>
