--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,9 +14,22 @@
 <string name="trial_price_paid">$0.99</string>
 <string name="trial_price_free">free</string>
 
-<string-array name="trial_extends">
-         <item >Buy this app via Google play - you\'ll get infinite time to use</item>
-         <item >Rate this app on Google play - you\'ll get 30 days to use</item>
+<string name="trial_until">Trial until</string>
+
+
+<string-array name="moths_of_year">
+         <item >January</item>
+		<item >February</item>
+		<item >March</item>
+		<item >April</item>
+		<item >May</item>
+		<item >June</item>
+		<item >July</item>
+		<item >August</item>
+		<item >September</item>
+		<item >October</item>
+		<item >November</item>
+		<item >December</item>
 </string-array>
      
     <string-array name="rate_me">
