rename package name to new

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,7 @@
 <string name="trial_price_free">free</string>
 
 <string name="trial_until">Trial until</string>
+<string name="trial_buyed">Infinite time to use</string>
 
 
 <string-array name="moths_of_year">
