--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -4,6 +4,33 @@
 <string name="disagree">Не согласен</string>
 <string name="agreement_top">Соглашение:</string>
 <string name="agreement">Для пользователей:\n • Я согласен, что приложение выполняет функцию обычного интернет браузера\n • Я согласен бесплатно использовать приложение только 7 дней со дня первого запуска. Или 14 дней, если я соглашусь оставить отзыв в интернет-магазине Google Play\n • После ознакомительного периода я получаю возможность купить данное приложение\n • Я согласен, что контент предоставляют сторонние интернет-сайты, и ничего против содержимого не имею\n\nДля правообладателей:\n • Я согласен, что приложение выполняет функцию обычного интернет браузера\n • Если эта информация принадлежит мне, и я не хочу, чтобы она свободно распространялась, я обязуюсь лично попытаться удалить эту информацию с сайтов, которые может открывать данный интернет-браузер\n • Если я не имею возможности удалить информацию с сайта я обязуюсь связаться с разработчиком данного приложения для переговоров об удалении возможности считывать информацию которая принадлежит мне, правообладателю\n\nКонтакты:\n • Роман Гаитбаев\n • romzesrover@gmail.com\n • vk.com/romzesrover</string>
+<string name="trial_title">Ваш пробный период для этого приложения закончился </string>
+<string name="trial_byu_google">Купить приложение</string>
+<string name="trial_byu_google_desc">Вы получите неогранниченное время на пользавание приложением</string>
+
+<string name="trial_get_thr">Оцени меня!</string>
+<string name="trial_get_thr_desc">Вы получите 30 дней на пользование</string>
+
+<string name="trial_price_paid">$0.99</string>
+<string name="trial_price_free">Беспл.</string>
+
+<string name="trial_until">Пробный до</string>
+<string name="trial_buyed">Неогранниченное время на пользавание приложением</string>
+
+<string-array name="moths_of_year">
+         <item >Января</item>
+		<item >Февраля</item>
+		<item >Марта</item>
+		<item >Апреля</item>
+		<item >Мая</item>
+		<item >Июня</item>
+		<item >Июля</item>
+		<item >Августа</item>
+		<item >Сентября</item>
+		<item >Октября</item>
+		<item >Ноября</item>
+		<item >Декабря</item>
+</string-array>
 
     <string-array name="rate_me">
          <item >Оцени меня!</item>
