fixing hieroglyph in horo.mail.ru > personal

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -43,6 +43,21 @@
 		
     <!-- Text below disallow to translate! -->
     <string name="ru_to_replace_one">ДО</string>
+    <string name="ru_to_replace_two">Ваш день рождения:</string>
+        <string-array name="ru_to_replace_three">
+         <item >Января</item>
+		<item >Февраля</item>
+		<item >Марта</item>
+		<item >Апреля</item>
+		<item >Мая</item>
+		<item >Июня</item>
+		<item >Июля</item>
+		<item >Августа</item>
+		<item >Сентября</item>
+		<item >Октября</item>
+		<item >Ноября</item>
+		<item >Декабря</item>
+</string-array>
      <string-array name="zodiac_signs_ru">
         <item >Овен</item>
         <item >Телец</item>
