--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,5 +2,7 @@
 <resources>
 
     <string name="app_name">Daily Horoscope</string>
+    
+    <string name="app_name_to_upper_case">DAILY HOROSCOPE</string>
 
 </resources>
