--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Daily Horoscope</string>
+    <string name="app_name">Horoscope</string>
     
     <string name="app_name_to_upper_case">HOROSCOPE</string>
+    <string name="application_to_upper_case">APPLICATION</string>
+    <string name="settings">Settings</string>
+    <string name="about">About</string>
+    
+    <string-array name="horoscope_com_horoscopes">
+    	<item>Yesterday</item>
+        <item>Today</item>
+        <item>Tomorrow</item>
+        <item>Personal</item>
+        <item>Weekly</item>
+        <item>Monthly</item>
+        <item>Year 2018</item>
+    </string-array>
 
 </resources>
