--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,10 +12,18 @@
     	<item>Yesterday</item>
         <item>Today</item>
         <item>Tomorrow</item>
-        <item>Personal</item>
         <item>Weekly</item>
         <item>Monthly</item>
         <item>Year 2018</item>
+    </string-array>
+    <string-array name="horoscope_com_kinds">
+    	<item>Sun sign</item>
+        <item>Love</item>
+        <item>Career</item>
+        <item>Money</item>
+        <item>Health</item>
+        <item>Chinese</item>
+        <item>Numerology</item>
     </string-array>
 
 </resources>
