--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,5 +25,20 @@
         <item>Chinese</item>
         <item>Numerology</item>
     </string-array>
+    
+    <string-array name="zodiac_signs">
+        <item>Ram / Aries</item>
+        <item>Bull / Taurus</item>
+        <item>Twins / Gemini</item>
+        <item>Crab / Cancer</item>
+        <item>Lion / Leo</item>
+        <item>Maiden / Virgo</item>
+        <item>Scales / Libra</item>
+        <item>Scorpion / Scorpio</item>
+        <item>Archer / Sagittarius</item>
+        <item>Goat-horned / Capricorn</item>
+        <item>Water-Bearer / Aquarius</item>
+        <item>Fish / Pisces</item>
+    </string-array>
 
 </resources>
