--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,6 +19,9 @@
     <string name="preference_show_notification_1">Show notifications</string>
     <string name="preference_time_1">Time</string>
     
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
+    
     <string-array name="horoscope_com_horoscopes">
     	<item>Yesterday</item>
         <item>Today</item>
