--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="preference_base">Base</string>
     <string name="preference_date_1">Birth date</string>
     <string name="preference_date_check">Check your data is correct</string>
-    <string name="preference_date_set">Looks like %s is your zodiac sign</string>
+    <string name="preference_date_set">Looks like %1$s is your zodiac sign, %2$s is your chinese zodiac sign, %3$d is your life-path number.</string>
     <string name="preference_zodiac_sign_1">Zodiac sign</string>
     <string name="preference_language_1">Language</string>
     
