full programing aboutFragment

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,13 +28,13 @@
     <string name="googleplay_summary">Leave us review on Google Play</string>
     <string name="share">Share app</string>
     <string name="share_summary">Share app page to friends</string>
-    <string name="share_comment">App to minimize ping of HSPA+ connection.\nAnd boost 3G quality connection.</string>
+    <string name="share_comment">Here is a handy app with horoscopes.</string>
     <string name="share_google_play">Google Play</string>
     <string name="share_google_play_summary">Link to the page of application on Google Play</string>
-    <string name="share_link_google_play">https://play.google.com/store/apps/details?id=com.BBsRs.HSPAP.Tweaker</string>
+    <string name="share_link_google_play">https://play.google.com/store/apps/details?id=com.BBsRs.horoscopeNewEdition</string>
     <string name="share_landing">Landing</string>
     <string name="share_landing_summary">Link to the landing page on brothers rovers\'s website</string>
-    <string name="share_link_landing">http://brothers-rovers.ru/hspap_tweaker_en.html</string>
+    <string name="share_link_landing">http://brothers-rovers.ru/horoscope_en.html</string>
     <string name="advertisement">Advertisement</string>
     <string name="advertisement_summary">Turn off the advertisement</string>
     <string name="advertisement_interstitials">Interstitials</string>
@@ -47,13 +47,13 @@
     <string name="feedback">Feedback</string>
     <string name="instagram">Instagram</string>
     <string name="instagram_summary">Follow the updates or ask questions</string>
-    <string name="instagram_link">https://www.instagram.com/hspaptweaker/</string>
+    <string name="instagram_link">https://www.instagram.com/dailyhoroscopefree/</string>
     <string name="vk">VKontakte</string>
     <string name="vk_summary">Follow the updates or ask questions</string>
     <string name="vk_link">https://vk.com/brothersrovers</string>
     <string name="facebook">Facebook</string>
     <string name="facebook_summary">Follow the updates or ask questions</string>
-    <string name="facebook_link">https://www.facebook.com/HSPA-Tweaker-3G-booster-819692164873159/</string>
+    <string name="facebook_link">https://www.facebook.com/horoscopeFullNew/</string>
     
     <string name="developer">Developer</string>
     <string name="brothersrovers">Brothers Rovers</string>
