add error message on errors obviosly

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,9 @@
     <string name="settings">Settings</string>
     <string name="about">About</string>
     
+    <string name="error_message">Check your connection and try again.</string>
+    <string name="error_retry">Retry</string>
+    
     <string name="preference_base">Base</string>
     <string name="preference_date_1">Birth date</string>
     <string name="preference_date_check">Check your data is correct</string>
