--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -112,6 +112,8 @@
     <string-array name="languages">
         <item>English</item>
         <item>Русский</item>
+        <item>Deutsch</item>
+        <item>Español</item>
     </string-array>
 
 </resources>
