--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -80,18 +80,18 @@
     <string name="brothersrovers_link">http://brothers-rovers.ru/</string>
     
     <string-array name="zodiac_signs">
-        <item>Ram / Aries</item>
-        <item>Bull / Taurus</item>
-        <item>Twins / Gemini</item>
-        <item>Crab / Cancer</item>
-        <item>Lion / Leo</item>
-        <item>Maiden / Virgo</item>
-        <item>Scales / Libra</item>
-        <item>Scorpion / Scorpio</item>
-        <item>Archer / Sagittarius</item>
-        <item>Goat-horned / Capricorn</item>
-        <item>Water-Bearer / Aquarius</item>
-        <item>Fish / Pisces</item>
+        <item>Aries</item>
+        <item>Taurus</item>
+        <item>Gemini</item>
+        <item>Cancer</item>
+        <item>Leo</item>
+        <item>Virgo</item>
+        <item>Libra</item>
+        <item>Scorpio</item>
+        <item>Sagittarius</item>
+        <item>Capricorn</item>
+        <item>Aquarius</item>
+        <item>Pisces</item>
     </string-array>
     
     <string-array name="chinese_zodiac_signs">
